--- a/app/templates/pages/base.jinja
+++ b/app/templates/pages/base.jinja
@@ -40,10 +40,14 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/things">Things</a></li>
                 <li><a href="/about">About</a></li>
-                <li><a href="/signup">Sign Up</a></li>
+                <li><a href="/signup">Signup</a></li>
             </ul>
         </nav>
     </header>
+
+
+    {# Show flash messages from any previous events #}
+    {% include "components/messages.jinja" %}
 
 
     <main>
@@ -54,13 +58,9 @@
     </main>
 
 
-    {% include "components/messages.jinja" %}
-
-
     {# Show debug info. Comment this out if not needed #}
     {% include "components/debug.jinja" %}
 
 </body>
 
 </html>
-
