--- a/app/templates/pages/base.jinja
+++ b/app/templates/pages/base.jinja
@@ -12,7 +12,7 @@
 
 <!DOCTYPE html>
 
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="dark">
 
 <head>
 	<meta charset="utf-8">
@@ -36,11 +36,16 @@
                 <li><strong><a href="/">Flask App Demo</a></strong></li>
             </ul>
 
+            {% if session.user_name %}
+                    <p>Welcome, {{ session.user_name }}</p>
+            {% endif %}
+
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/things">Things</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/signup">Signup</a></li>
+                <li><a href="/login">Login</a></li>
             </ul>
         </nav>
     </header>
