--- a/app/templates/pages/thing.jinja
+++ b/app/templates/pages/thing.jinja
@@ -27,10 +27,15 @@
 
         <p>Owner: {{ thing.u_name }}</p>
 
-        <footer>
-            <a href="/delete/{{ thing.t_id }}" onclick="return confirm('Really delete?');">Delete</a>
-        </footer>
+    {% if session.user_id%}
 
+        {% if session.user_id == thing.u_id %}
+            <footer>
+                <a href="/delete/{{ thing.t_id }}" onclick="return confirm('Really delete?');">Delete</a>
+            </footer>
+        {% endif %}
+
+    {% endif %}
     </article>
 
 
